k8s/deployment-green.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: spring-music-green
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: spring-music
        type: green
    spec:
      serviceAccountName: demo
      containers:
      - name: spring-music
        image: yogendra/spring-music:latest-green
        imagePullPolicy: Always
        resources:
          requests:
            memory: "768Mi"
            cpu: "500m"
          limits:
            memory: "768Mi"
            cpu: "1"
        ports:
        - name: web
          containerPort: 8080
