k8s/service-green.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-music
  namespace: default
  labels:
    app: spring-music
spec:
  selector:
    app: spring-music-green
    type: green
  ports:
  - name: web
    port: 80
    targetPort: 8080
